<package>
  <name>fingertip_mapping</name>
  <description> the     fingertip_mapping package  </description>
<version> 0.0.0 </version>
  <author>Humberto Alvarez-Heredia, Alexis Maldonado</author>
  <license>GPLv3+</license>
<maintainer email ="mnkmuntahi@gmail.com"> karim </maintainer>
  <url>http://toychest.in.tum.de</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
<build_depend>rospy</build_depend>
<build_depend>roscpp</build_depend>
<build_depend>tf</build_depend>
<build_depend>pcl</build_depend>
<build_depend>pcl_ros</build_depend>
<build_depend>fingertip_msg</build_depend>

  
  <!-- <build_depend="visualization_msgs"/> -->

</package>


